Fixed text in select box overflowing

--- a/stylus/app.styl
+++ b/stylus/app.styl
@@ -402,7 +402,7 @@ body
   position relative
   select
     background white
-    width 100px
+    width 112px
     height 38px
     font-size 12px
     padding 0 10px
